--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
   <body>
     <%= render "shared/navbar" %>
     <div class="container">
+    <%= render partial: "shared/flash" %>
       <%= yield %>
     </div>
   </body>
