--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,33 +1,53 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <%= link_to "Navbar", root_path, class: "navbar-brand" %>
+    <%= link_to "Rails App", root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
       <ul class="navbar-nav">
+        <% if Current.user %>
+          <li class="nav-item">
+            <%= link_to "X Postları", x_posts_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "X Hesapları", x_accounts_path, class: "nav-link" %>
+          </li>
+          
+        <% end %>
         <li class="nav-item">
-          <%= link_to "Home", root_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link" %>
+          <%= link_to "Hakkında", about_path, class: "nav-link" %>
         </li>
       </ul>
       <ul class="navbar-nav">
         <% if Current.user %>
-          <li class="nav-item">
-            <span class="nav-link"><%= Current.user.email %></span> 
-          </li>
-          <li class="nav-item">
-            <%= button_to "Logout", logout_path, method: :delete, class: "nav-link btn btn-outline-primary" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+              <%= Current.user.email %>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <% if Current.user.x_accounts.any? %>
+                <span class="dropdown-item-text">
+                  <small class="text-muted">X Hesabı: @<%= Current.user.x_accounts.first.username %></small>
+                </span>
+                <div class="dropdown-divider"></div>
+              <% end %>
+              <%= link_to "Profil", "#", class: "dropdown-item" %>
+              <%= link_to "X Hesap Ayarları", x_accounts_path, class: "dropdown-item" %>
+              <div class="dropdown-divider"></div>
+              <%= button_to "Çıkış Yap", logout_path, method: :delete, class: "dropdown-item text-danger", style: "border: none; background: none; width: 100%; text-align: left;" %>
+            </div>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Sign Up", sign_up_path, class: "nav-link btn btn-outline-primary" %>
+            <%= link_to "Kayıt Ol", sign_up_path, class: "nav-link btn btn-outline-primary" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign In", sign_in_path, class: "nav-link btn btn-outline-primary" %>
-          </li> 
+            <%= link_to "Giriş Yap", sign_in_path, class: "nav-link btn btn-outline-primary" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "X ile Giriş", "/auth/x", class: "nav-link btn btn-primary" %>
+          </li>
         <% end %>
       </ul>
     </div>
